<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.group25hw03.Stats">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="145dp"
        android:layout_marginTop="42dp"
        android:text="@string/triviastats"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txtViewProgress"
        android:layout_below="@+id/textView"
        android:layout_marginTop="77dp"
        android:text="@string/correctAnswers"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtViewProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/btnQuit"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="28dp"
        android:text="@string/progressvalue" />

    <ProgressBar
        android:id="@+id/progressbaranswers"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txtViewProgress"
        android:layout_alignStart="@+id/textView"
        android:layout_alignTop="@+id/txtViewProgress" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/txtfortryagain" />

    <Button
        android:id="@+id/btnQuit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView4"
        android:layout_marginBottom="23dp"
        android:text="@string/quit"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnTryAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnQuit"
        android:layout_alignBottom="@+id/btnQuit"
        android:layout_alignEnd="@+id/textView4"
        android:text="@string/tryagain"
        android:textStyle="bold" />

</RelativeLayout>
