<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.group25hw03.Trivia">

    <TextView
        android:id="@+id/txtViewQuestionNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtViewTimer"
        android:layout_alignBottom="@+id/txtViewTimer"
        android:layout_alignParentStart="true"
        android:layout_marginStart="21dp"
        android:text="@string/QuestionNumber"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtViewTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="23dp"
        android:layout_marginTop="14dp"
        android:text="@string/timer"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imgViewQuestionDisplayed"
        android:layout_width="200dp"
        android:layout_height="130dp"
        android:layout_below="@+id/txtViewQuestionNumber"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp" />

    <TextView
        android:id="@+id/txtViewQuestionContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txtViewQuestionNumber"
        android:layout_below="@+id/imgViewQuestionDisplayed"
        android:layout_marginStart="17dp"
        android:layout_marginTop="21dp"
        android:text="@string/questionContent"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/rdioGroupQuestionChoices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txtViewQuestionContent"
        android:layout_below="@+id/txtViewQuestionContent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp" >

    </RadioGroup>

    <Button
        android:id="@+id/btnQuit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/txtViewQuestionContent"
        android:layout_marginBottom="25dp"
        android:text="@string/Quit" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnQuit"
        android:layout_alignEnd="@+id/txtViewTimer"
        android:text="@string/next" />

</RelativeLayout>
