<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.group25hw03.MainActivity">

    <TextView
        android:id="@+id/txtViewWelcomeToTriviaApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:text="@string/welcometotriviaapp"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="59dp"
        android:layout_marginStart="33dp"
        android:text="@string/exit" />

    <Button
        android:id="@+id/btnStartTrivia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnExit"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="31dp"
        android:enabled="false"
        android:text="@string/starttrivia" />

    <TextView
        android:id="@+id/txtViewTriviaReady"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnStartTrivia"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="124dp"
        android:text="@string/triviaready"
        android:textSize="18sp"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/imgViewTrivia"
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:layout_above="@+id/txtViewTriviaReady"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="15dp"
        android:scaleType="fitCenter"
        android:visibility="invisible" />
</RelativeLayout>
